# learn_selenium

./: .gitignore  main.py  pyproject.toml
chromedriver/: main.py
core/: services.py  settings.py
firefoxdriver/: main.py
